# QuaTrEx

./: .gitignore  README.md  __about__.py  gmon.out  nodes_001_epn_064.out  nodes_002_epn_064.out  nodes_004_epd_64.out  nodes_008_epn_64.out  nodes_016_epn_064.out  nodes_064_epn64.out  nodes_128_epn_064.out  nodes_32_epn_64.out  profile_gf_obc.py  profile_w_obc.py  pyproject.toml  setup.py  shell_profile.sh  stress_g2p.py  test_batched_ops.py  test_gf_full.py  test_gf_obc.py  test_symmetrization.py
examples/: GW_biasedGNR_IEDM_sc.py  GW_single_IEDM.py  GW_singlebiased_IEDM.py  test1.py
install/: experiments.sh  grub  install_cupy.sh  install_general.sh  install_mpi4py.sh  install_ompi.sh  install_python.sh  install_rocm_driver.sh  install_rocm_software.sh
quatrex/: README.md  constantes.py  constants.py  gmon.out  inputdiag32coulomb.py  inputdiagadjust.py  inputdiagadjustnewgrid.py  quatrex_interface.py  quatrex_preprocessing.py  quatrex_solver.py  simulation_parameters.py  solvers_parameters.py
samples/: CNT_biased.py  CNT_biased107_SC_daint_memopt.py  CNT_biased107_SC_daint_memopt_t.py  CNT_biased107_SC_local_memopt.py  CNT_biased107_SC_local_memopt_restart.py  CNT_biased107_SC_todi_memopt.py  CNT_biased107_SC_todi_memopt_restart.py  CNT_biased107_nlm_shorttest.py  CNT_biased107_nlm_shorttest_daint.py  CNT_biased64_nlm_shorttest.py  CNT_biased64_nlm_shorttest_daint.py  CNT_flat.py  GW_SE_sequencetest.py  GW_biasedGNR_IEDM_sc.py  GW_sc.py  GW_sequence_test_from0.py  GW_single.py  GW_single_IEDM.py  GW_singlebiased_CF_test_11.py  GW_singlebiased_CF_test_3.py  (+58 more)
(+237 files in other folders)
