[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "QuaTrex"
version = "0.1"
authors = [{name = "Nano-TCAD group"}]
description = "Quantum Transport at the Exascale and Beyond"
readme = "README.MD"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools]
packages = ["quatrex"]
